--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ playwright>=1.40.0
 # Data handling
 pandas>=2.0.0
 
+# PDF processing
+pypdf>=4.0.0
+pdfplumber>=0.11.0
+
 # CLI
 click>=8.1.0
 rich>=13.0.0
