--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ resume_pool/base_resumes/*.pdf
 resume_pool/tailored_resumes/*.json
 resume_pool/metadata/*.json
 resume_pool/job_postings/*.json
+resume_pool/reports/*.html
 
 # Keep example files
 !resume_pool/**/.gitkeep
